@@ -1,1 +1,1 @@
-1.8.27.0-rc2
+1.8.27.0
